--- a/per/ma/public/2024-25/dashboard24.html
+++ b/per/ma/public/2024-25/dashboard24.html
@@ -153,7 +153,7 @@
     color: #000;
     text-align: left;
     font-style: oblique; 
-    text-underline-position:below;
+    text-decoration-line:underline;
     list-style-type:circle;
   }
 
@@ -281,10 +281,11 @@
           <h2>Evidence</h2>
         
           <div class="achievements">
-            <p class="title"><strong>Achievements</strong></p>
+            <p class="title"><strong>Achievements</strong>
             <a href="https://read.bookcreator.com/L3p09VMiRPMmNKeERZImhkCpQXx1/bJCkJ39JTcCHxqYv6hCoLQ" target="_blank">
               Visit Page
             </a>
+          </p>
           </div>
         
           <div class="impacts">
