--- a/per/ma/public/2024-25/dashboard24.html
+++ b/per/ma/public/2024-25/dashboard24.html
@@ -207,7 +207,7 @@
       z-index: 1000;
       top: 0;
       left: 0;
-      width: 100vw;
+      width: 80vw;
       height: 100vh;
       background: rgba(0, 0, 0, 0.8);
       justify-content: center;
@@ -225,7 +225,7 @@
     .lightbox-close {
       position: absolute;
       top: 20px;
-      right: 30px;
+      left: 30px;
       font-size: 2rem;
       color: white;
       cursor: pointer;
@@ -290,13 +290,14 @@
           <img src="/2024-25/IMG-20250429-WA0003.jpg" onclick="expandImage(this.src)">
           <img src="/2024-25/IMG-20250429-WA0007.jpg" onclick="expandImage(this.src)">              
           <img src="/2024-25/IMG-20250429-WA0006.jpg" onclick="expandImage(this.src)">
+          <img src="/2024-25/WhatsApp Image 2025-04-30 at 11.36.57_e02e9fa7.jpg" onclick="expandImage(this.src)">
           <img src="/2024-25/IMG-20250429-WA0005.jpg" onclick="expandImage(this.src)">
           <img src="/2024-25/IMG-20250429-WA0004.jpg" onclick="expandImage(this.src)">
           <img src="/2024-25/IMG-20250429-WA0008.jpg" onclick="expandImage(this.src)">
           <img src="/2024-25/IMG-20250429-WA0009.jpg" onclick="expandImage(this.src)">
           <img src="/2024-25/IMG-20250429-WA0011.jpg" onclick="expandImage(this.src)">
           <img src="/2024-25/IMG-20250429-WA0013.jpg" onclick="expandImage(this.src)">
-          <img src="/2024-25/WhatsApp Image 2025-04-30 at 11.36.57_e02e9fa7.jpg" onclick="expandImage(this.src)">
+          
         </div>
 
         <div class="lightbox-overlay" id="lightbox" onclick="closeLightbox()">
