--- a/per/ma/public/2024-25/dashboard24.html
+++ b/per/ma/public/2024-25/dashboard24.html
@@ -157,7 +157,7 @@
     }
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      grid-template-columns: repeat(4, 1fr);
       gap: 1rem;
       margin-top: 1rem;
     }
