--- a/per/ma/public/2025-26/students.html
+++ b/per/ma/public/2025-26/students.html
@@ -162,6 +162,7 @@
       <div class="card">
         <h2>House Activities</h2>
         <p>
+          <img src="/2024-25/IMG-20250429-WA0001.jpg">
           <!--Students ka content house activities-->
         </p>
       </div>
