--- a/per/ma/public/2025-26/students.html
+++ b/per/ma/public/2025-26/students.html
@@ -162,7 +162,7 @@
       <div class="card">
         <h2>House Activities</h2>
         <p>
-          <img src="/2024-25/IMG-20250429-WA0001.jpg">
+          <img src="/2025-26/WhatsApp Image 2025-04-29 at 11.31.25_d0688abe.jpg" width="100" height="100">
           <!--Students ka content house activities-->
         </p>
       </div>
